--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -9,6 +9,7 @@
 //GENERIC
 @import "generic/header"
 @import "generic/footer"
+@import "generic/mobile-menu"
 
 //SECTIONS
 @import "sections/hero"
@@ -23,6 +24,8 @@
 @import "sections/decorated-cta"
 @import "sections/roadmap-section"
 @import "sections/team-section"
+@import "sections/discover-web3"
+@import "sections/cta-litepaper"
 
 //BLOCKS
 @import "blocks/notepad"
