--- a/resources/sass/cards/_what-is-card.sass
+++ b/resources/sass/cards/_what-is-card.sass
@@ -11,6 +11,7 @@
   align-items: center
   justify-content: flex-start
   text-align: center
+  min-width: 236px
 
 .what-is-card__image
   +fluid-type(105px, 150px, 'height')
