--- a/resources/sass/_mixins.sass
+++ b/resources/sass/_mixins.sass
@@ -4,6 +4,11 @@ $layout-height: 800
 $mobile-width: 320
 $tablet-width: 768
 
+$tablet: 1024
+$mobile: 600
+
+$default-gap: 20px
+
 @function get-vw($px)
   $vw-context: ($layout-width*.01) * 1px
   @return ($px/$vw-context) * 1vw
