--- a/resources/sass/sections/_team-section.sass
+++ b/resources/sass/sections/_team-section.sass
@@ -1,3 +1,6 @@
+.team-section
+  padding: 100px 0
+
 .team-box
   position: relative
   z-index: 0
@@ -22,6 +25,7 @@
   transform-origin: center center
   z-index: -1
   pointer-events: all
+  cursor: pointer
 
 .team-members svg
   position: absolute
