--- a/resources/sass/cards/_numbered-card.sass
+++ b/resources/sass/cards/_numbered-card.sass
@@ -8,6 +8,7 @@
   flex-direction: column
   align-items: center
   justify-content: flex-start
+  min-width: 236px
 
 .numbered-card__title
   +fluid-type(20px, 32px, 'margin-top')
