--- a/resources/sass/sections/_how-to-start.sass
+++ b/resources/sass/sections/_how-to-start.sass
@@ -1,6 +1,8 @@
 .how-to-start
   display: grid
   grid-template-columns: 1fr 1fr
+  +mediaSize($small-tablet)
+    grid-template-columns: minmax(0, 1fr)
 
 .how-to-start .steps-block
   +fluid-type(32px, 60px, 'margin-top')
