--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -226,3 +226,50 @@ section + section
 .img-in-text img
   pointer-events: none
   max-height: 0.8em
+
+.scroll-snap__elements:before,
+.scroll-snap__elements:after
+  +mediaSize($tablet)
+    content: ''
+    display: inline-block
+    left: 0
+    bottom: 0
+    height: 20px
+    width: $default-gap - 16px
+    flex-shrink: 0
+    pointer-events: none
+
+.scroll-snap__elements > *
+  scroll-snap-align: center
+  white-space: normal
+
+.scroll-snap__elements
+  scroll-snap-type: x mandatory
+  -webkit-overflow-scrolling: touch
+  white-space: nowrap
+  overflow-x: scroll
+  scroll-behavior: smooth
+  +mediaSize($tablet)
+    width: calc(100% + #{$default-gap * 2})
+    margin-left: -$default-gap
+    grid-gap: 16px
+
+.scroll-snap.no-scroll .scroll-snap__indicators
+  display: none
+
+.scroll-snap__indicators
+  margin-top: 32px
+  grid-gap: 10px
+  display: flex
+
+.scroll-snap__indicator
+  height: 4px
+  border-radius: 6px
+  background-color: rgba(59, 62, 72, 0.5)
+  width: 100%
+  transition: background-color .2s linear
+
+.scroll-snap__indicator:hover,
+.scroll-snap__indicator:focus,
+.scroll-snap__indicator.active
+  background-color: $green
