--- a/resources/sass/cards/_notepad-card.sass
+++ b/resources/sass/cards/_notepad-card.sass
@@ -3,7 +3,6 @@
   position: relative
   transform: translateZ(0)
   z-index: 0
-  //filter: drop-shadow(0px -2px 0px $border-color) drop-shadow(0px 2px 0px $border-color) drop-shadow(-2px 0px 0px $border-color) drop-shadow(2px 0px 0px $border-color)
   +mediaSize($mobile)
     padding-right: calc(20px + 32px + 20px)
 
@@ -32,13 +31,11 @@
   top: 0
   right: 0
   bottom: 0
-  //clip-path: url("#notepad-card-clippath")
   z-index: -1
   border-radius: 8px
   background-image: url("../image/backgrounds/notepad-card.png")
   background-repeat: no-repeat
   background-size: 100% 100%
   background-position: center center
-  //background-color: $tile-bg
-  +mediaSize(600)
+  +mediaSize($mobile)
     background-image: url("../image/backgrounds/notepad-card-mobile.png")
