--- a/resources/sass/generic/_footer.sass
+++ b/resources/sass/generic/_footer.sass
@@ -14,6 +14,15 @@ footer
   +fluid-type(32px, 80px, 'margin-top')
   display: flex
   justify-content: space-between
+  +mediaSize($small-tablet)
+    flex-direction: column
+    margin-top: 0
+
+.footer__socials
+  +mediaSize($small-tablet)
+    border-bottom: 2px solid $border-color
+    padding: 32px 0
+    margin-bottom: 32px
 
 .footer__socials__listing
   display: grid
@@ -53,6 +62,8 @@ footer
   +fluid-type(20px, 40px, 'grid-column-gap')
   +fluid-type(20px, 36px, 'grid-row-gap')
   max-width: 360px
+  +mediaSize($small-tablet)
+    max-width: 100%
 
 .footer__tech-links ul li
   line-height: 1
@@ -67,3 +78,23 @@ footer
 .footer__menu .header__cta
   +mediaSize($tablet)
     display: flex
+
+.footer__navigation
+  display: none
+  +mediaSize($tablet)
+    display: block
+    margin-top: 32px
+    padding: 32px 0
+    border-top: 2px solid $border-color
+    border-bottom: 2px solid $border-color
+
+.footer__navigation nav
+  display: flex
+  justify-content: center
+
+.footer__navigation ul
+  display: grid
+  grid-template-columns: 1fr 1fr 1fr
+  grid-gap: 16px
+  +mediaSize($mobile)
+    grid-template-columns: 1fr 1fr
