--- a/resources/sass/includes/_button.sass
+++ b/resources/sass/includes/_button.sass
@@ -64,13 +64,13 @@
 
 .btn-primary--simple:hover .value,
 .btn-primary--simple:focus .value
-  transform: none
+  transform: none!important
 
 .btn-primary--simple:after
-  display: none
+  display: none!important
 
 .btn-primary--simple
-  padding: 0
+  padding: 0!important
 
 .btn-primary .value:before
   content: ''
