--- a/resources/sass/blocks/_notepad.sass
+++ b/resources/sass/blocks/_notepad.sass
@@ -101,6 +101,9 @@
 
 .notepad__page-content.active
   display: block
+  //animation: fade-in 1s linear
+  //height: auto
+  //visibility: visible
 
 .notepad__page-content
   display: none
