--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3389,6 +3389,10 @@ label {
     margin-left: 0;
     margin-top: 36px;
   }
+  .safe-start__listing > *:nth-child(3n),
+  .safe-start__listing > *:nth-child(3n+1) {
+    margin-top: 0;
+  }
   .notepad {
     -ms-grid-columns: minmax(0, 1fr);
     grid-template-columns: minmax(0, 1fr);
