--- a/resources/sass/sections/_safe-start.sass
+++ b/resources/sass/sections/_safe-start.sass
@@ -19,3 +19,5 @@
 .safe-start__listing > *:nth-child(3n),
 .safe-start__listing > *:nth-child(3n+1)
   margin-top: 50px
+  +mediaSize($mobile)
+    margin-top: 0
